fix; heading spacing and weight

--- a/src/components/Layout/heading.css
+++ b/src/components/Layout/heading.css
@@ -1,30 +1,38 @@
 @define-mixin ktf-h1 {
     font-size: 43px;
     line-height: 49px;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
 }
 
 @define-mixin ktf-h2 {
     font-size: 35px;
     line-height: 42px;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
 }
 
 @define-mixin ktf-h3 {
     font-size: 20px;
     line-height: 28px;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
 }
 
 @define-mixin ktf-h4 {
     font-size: 16px;
     line-height: 24px;
+    font-weight: 600;
+    padding: 0;
+    margin: 0;
 }
 
 @each $size in 1, 2, 3, 4 {
     .ktf-h$(size) {
         color: var(--rs-typography-color-hard);
-        font-weight: 600;
-        padding: 0;
-        margin: 0;
-
         @mixin ktf-h$(size);
     }
 
